# TapeEmulator

./: .gitignore.txt  CMakeLists.txt  README.md  tape_conf.conf
include/: ITape.h  Tape.h  TapeMapping.h  TapeSorter.h
src/: Tape.cpp  TapeMapper_main.cpp  TapeMapping.cpp  TapeSorter.cpp  TapeSorter_main.cpp  main.cpp
tests/: CMakeLists.txt  sorter_unit_tests.cpp
